MyDemoOrg/force-app/main/default/objects/Contact/fields/Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Info__c</fullName>
    <label>Account Info</label>
    <type>TextArea</type>
</CustomField>