MyDemoOrg/force-app/main/default/objects/Contact/fields/BBCRM__ContactLead__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__ContactLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>