MyDemoOrg/force-app/main/default/objects/Contact/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <type>TextArea</type>
</CustomField>