MyDemoOrg/force-app/main/default/objects/Contact/fields/Price_difference__c.field-meta.xml
<CustomField>
    <fullName>Price_difference__c</fullName>
    <formula>Price_Up__c  -  Price_down__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>