MyDemoOrg/force-app/main/default/objects/Contact/fields/Price_down__c.field-meta.xml
<CustomField>
    <fullName>Price_down__c</fullName>
    <label>Price down</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>