MyDemoOrg/force-app/main/default/objects/Contact/fields/Sample_Address__c.field-meta.xml
<CustomField>
    <fullName>Sample_Address__c</fullName>
    <label>Sample Address</label>
    <type>TextArea</type>
</CustomField>