MyDemoOrg/force-app/main/default/objects/Contact/fields/Srinivas_Images_Path_c__c.field-meta.xml
<CustomField>
    <fullName>Srinivas_Images_Path_c__c</fullName>
    <label>Srinivas__Images_Path__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>