MyDemoOrg/force-app/main/default/objects/Contact/fields/Srinivas_Picture_c__c.field-meta.xml
<CustomField>
    <fullName>Srinivas_Picture_c__c</fullName>
    <formula>IMAGE(Srinivas_Images_Path_c__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Srinivas__Picture__c</label>
    <type>Text</type>
</CustomField>