MyDemoOrg/force-app/main/default/objects/Contact/validationRules/Check_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Price_difference__c &lt;  0</errorConditionFormula>
    <errorMessage>Price should be less than 0</errorMessage>
</ValidationRule>