MyDemoOrg/force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <description>This for learning purpose, created to achieve trail head test.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Account.Id)), Account.ShippingPostalCode  &lt;&gt;  MailingPostalCode )</errorConditionFormula>
    <errorMessage>Incorrect Shipping Postal code, please verify account postal code.</errorMessage>
</ValidationRule>